name:                tidal-unity-osc
version:             0.0.1
synopsis:            custom tidal module
license:             GPL-3
author:              Mike Hodnick
maintainer:          Mike Hodnick <mike.hodnick@gmail.com>
Stability:           Experimental
Copyright:           (c) Mike Hodnick, 2016
category:            Sound
build-type:          Simple
cabal-version:       >=1.4

Description: Custom Tidal OSC for Mike

library
  Exposed-modules: UnityOsc

  Build-depends: base < 5, tidal
